deployment/kubernetes/vm/app/file-server/file-server-outside.yaml
#
# Copyright 2017-2018 The Everest Authors
#
# Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except
# in compliance with the License. You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software distributed under the License
# is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express
# or implied. See the License for the specific language governing permissions and limitations under
# the License.
#

apiVersion: v1
kind: Service
metadata:
  #namespace: everest
  name: file-server-outside
spec:
  ports:
  - port: 9000
    nodePort: 30009
  type: NodePort 
  selector:
    app: file-server
