deployment/kubernetes/vm/app/file-server/file-server.yaml
#
# Copyright 2018-2019 The Everest Authors
#
# Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except
# in compliance with the License. You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software distributed under the License
# is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express
# or implied. See the License for the specific language governing permissions and limitations under
# the License.
#
# How to Test: kubectl exec -it $(kubectl get pod -l app=ratings -o jsonpath='{.items[0].metadata.name}') -c ratings -- curl http://fs.everest-app:9000/fibo?n=3
#
#
##################################################################################################
# Fibo remote service
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: fibo
  labels:
    app: fibo
    service: fibo
spec:
  ports:
  - port: 9001
    name: http
  selector:
    app: fibo
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: fibo-v1
  labels:
    app: fibo
    version: v1
spec:
  replicas: 3
  template:
    metadata:
      labels:
        app: fibo
        version: v1
    spec:
      containers:
      - name: fibo
        image: iharijono/file-server:latest
        # command: [ "/bin/sh", "-c", "--" ]
        # args: [ "while true; do sleep 30; done;" ]
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9001
---
# apiVersion: extensions/v1beta1
# kind: Deployment
# metadata:
#   name: fibo-v2
#   labels:
#     app: fibo
#     version: v2
# spec:
#   replicas: 1
#   template:
#     metadata:
#       labels:
#         app: fibo
#         version: v2
#     spec:
#       containers:
#       - name: fibo
#         image: iharijono/file-server:latest
#         imagePullPolicy: Always
#         ports:
#         - containerPort: 9001
#         env:
#         - name: EVEREST_FS_VERBOSE
#           value: "true"
#         - name: EVEREST_FS_PORT
#           value: "9001"
#         - name: EVEREST_FS_NO_VIDEO
#           value: "true"
#         - name: EVEREST_FS_NO_FILE
#           value: "true"
#         - name: EVEREST_FS_FIBO_REMOTE_HOST
#           value: "fibo"
#         - name: EVEREST_FS_FIBO_REMOTE_PORT
#           value: "9001"
# ---
##################################################################################################
# FS services
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: fs
  labels:
    app: fs
    service: fs
spec:
  ports:
  - port: 9000
    name: http
  selector:
    app: fs
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: fs-v1
  labels:
    app: fs
    version: v1
spec:
  replicas: 3
  template:
    metadata:
      labels:
        app: fs
        version: v1
    spec:
      containers:
      - name: fs
        image: iharijono/file-server:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9000
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: fs-standalone-v1
  labels:
    app: fs
    version: standalone-v1
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: fs
        version: standalone-v1
    spec:
      containers:
      - name: fs
        image: iharijono/file-server:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 9000
---
