deployment/kubernetes/vm/app/file-server/fs-istio-gateway.yaml
#
# Copyright 2018-2019 The Everest Authors
#
# Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except
# in compliance with the License. You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software distributed under the License
# is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express
# or implied. See the License for the specific language governing permissions and limitations under
# the License.
#
# How to test: 

##################################################################################################
# Istio Gateway for FS app of everest project
##################################################################################################
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: fs-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: fs
spec:
  hosts:
  - "*"
  gateways:
  - fs-gateway
  http:
  - match:
    - uri:
        prefix: /fibo
    - uri:
        prefix: /fibo_remote
    - uri:
        prefix: /guide
    - uri:
        prefix: /guide_remote
    - uri:
        prefix: /guide_fibo
    - uri:
        prefix: /file
    - uri:
        prefix: /video
    - uri:
        prefix: /uploadfile
    route:
    - destination:
        host: fs
        port:
          number: 9000
        subset: v1
      weight: 100
    # - destination:
    #     host: fs
    #     port:
    #       number: 9000
    #     subset: v1-idle
    #   weight: 0
    - destination:
        host: fs
        port:
          number: 9000
        subset: v1-busy
      weight: 0
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: fibo
spec:
  hosts:
  - fibo
  http:
  - match:
    - uri:
        prefix: /fibo
    route:
    - destination:
        host: fibo
        port:
          number: 9001
        subset: v1
      weight: 100
    # - destination:
    #     host: fibo
    #     port:
    #       number: 9001
    #     subset: v1-idle
    #   weight: 0
    - destination:
        host: fibo
        port:
          number: 9001
        subset: v1-busy
      weight: 0
---
